fixed some alignments

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -9,6 +9,7 @@
   --nav-menu-background: #081b29;
   --background-light-color: #f9f9f9;
 }
+
 .about-link {
   color: var(--theme-color);
 }
@@ -230,7 +231,8 @@ nav ul {
 }
 #line {
   width: 60%;
-  margin: 3rem auto;
+  margin: 0.2rem auto;
+  margin-bottom: 2rem;
 }
 
 /* ================= skills section styling ================= */
@@ -259,7 +261,7 @@ nav ul {
   gap: 10px;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: start;
   justify-content: center;
 }
 .col {
@@ -288,6 +290,9 @@ nav ul {
   flex-wrap: wrap;
   gap: 1rem;
   margin-top: 1rem;
+  border-radius: 6px;
+  padding-bottom: 10px;
+  border: 1px solid var(--box-border-color);
 }
 .proj-container .proj-box {
   width: 33rem;
@@ -302,24 +307,22 @@ nav ul {
   border-top-right-radius: 5px;
 }
 .proj-box h1 {
-  font-size: 2rem;
-  width: 90%;
-  margin: 1.5rem auto;
-  text-align: left;
+  width: 80%;
+  font-size: 1.8rem;
+  margin: 1rem auto;
+  text-align: center;
 }
 .proj-box .ul-div {
-  width: 90%;
   font-size: 12px;
   margin: 1rem 20px;
   text-align: left;
-  padding-bottom: 2rem;
 }
 .skills-used h2 {
   text-align: left;
-  padding-left: 2rem;
+  padding-left: 1rem;
 }
 .skills-used ul {
-  padding-left: 4rem;
+  padding-left: 3rem;
   text-align: left;
   padding-bottom: 2rem;
 }
